objects/PT_Integration__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client_Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PT Integration</label>
    <pluralLabel>PT Integrations</pluralLabel>
</CustomObject>